--- a/Source/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Source/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Engine/Maps/Templates/Template_Default
 
 [ModuleFileTracking]
-DU_Project.TimeStamp=2022.03.14-15.03.48
+DU_Project.TimeStamp=2022.03.14-15.33.57
 DU_Project.LastCompileMethod=External
 PakFile.TimeStamp=2022.03.08-10.08.55
 PakFile.LastCompileMethod=External
@@ -1013,7 +1013,7 @@ BlueprintGraph.TimeStamp=2022.03.08-05.36.39
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
